--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-table": "^8.10.7",
     "@uiball/loaders": "^1.3.0",
@@ -24,6 +28,7 @@
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2",
     "supabase": "^1.100.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
